Create new commitFederationFailed Bridge event