@@ -38,7 +38,6 @@ import org.ethereum.vm.PrecompiledContracts;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Responsible for logging events triggered by BridgeContract in RLP format.
@@ -67,7 +66,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logUpdateCollections(Transaction rskTx) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logUpdateCollections method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logUpdateCollections method after RSKIP146 activation"
             );
         }
         this.logs.add(
@@ -82,7 +81,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logAddSignature(FederationMember federationMember, BtcTransaction btcTx, byte[] rskTxHash) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logAddSignature method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logAddSignature method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.ADD_SIGNATURE_TOPIC);
@@ -97,7 +96,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logReleaseBtc(BtcTransaction btcTx, byte[] rskTxHash) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logReleaseBtc method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logReleaseBtc method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.RELEASE_BTC_TOPIC);
@@ -110,7 +109,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logCommitFederation(Block executionBlock, Federation oldFederation, Federation newFederation) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logCommitFederation method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logCommitFederation method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.COMMIT_FEDERATION_TOPIC);
@@ -129,6 +128,13 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
         this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, topics, data));
     }
 
+    @Override
+    public void logCommitFederationFailure(Block executionBlock, Federation proposedFederation) {
+        throw new UnsupportedOperationException(
+            "Calling BridgeEventLoggerLegacyImpl.logCommitFederationFailure is not allowed, since this event was created after deprecating the class."
+        );
+    }
+
     private byte[] flatKeysAsRlpCollection(List<BtcECKey> keys) {
         return flatKeys(keys, (k -> RLP.encodeElement(k.getPubKey())));
     }
@@ -136,7 +142,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     private byte[] flatKeys(List<BtcECKey> keys, Function<BtcECKey, byte[]> parser) {
         List<byte[]> pubKeys = keys.stream()
             .map(parser)
-            .collect(Collectors.toList());
+            .toList();
         int pubKeysLength = pubKeys.stream().mapToInt(key -> key.length).sum();
 
         byte[] flatPubKeys = new byte[pubKeysLength];
